--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,8 @@
         android:id="@+id/recycle"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:orientation="vertical"
         android:paddingHorizontal="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
