--- a/app/src/main/res/drawable/shape_search.xml
+++ b/app/src/main/res/drawable/shape_search.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <corners android:radius="12dp"/>
     <stroke android:color="#9C27B0" android:width="1dp"/>
+    <solid android:color="@color/white"/>
 </shape>
