--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -61,6 +62,7 @@
             android:background="@drawable/shape_search"
             android:drawableEnd="@drawable/ic_baseline_search_24"
             android:drawablePadding="8dp"
+            android:textColor="@color/black"
             android:hint="search"
             android:paddingVertical="8dp"
             android:paddingStart="8dp"
